<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tab_route_list">ROUTE LISTS</string>
    <string name="tab_all_routes_map">ROUTE MAP</string>
    <string name="conductors">CONDUCTORS</string>
    <string name="parents">PARENTS</string>
    <string name="drivers">DRIVERS</string>
    <string name="users">USERS</string>
    <string name="add_new_conductor">ADD NEW CONDUCTOR</string>
    <string name="add_new_driver">ADD NEW DRIVER</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by name&#8230;</string>
    <string name="stop_student_count_format">%d Students assigned</string>
    <string name="stop_details">STOP DETAILS</string>
    <string name="stop_information">STOP INFORMATION</string>
    <string name="stop_name_label">STOP NAME</string>
    <string name="coordinates_label">COORDINATES</string>
    <string name="assigned_students">ASSIGNED STUDENTS</string>
    <string name="add_student">+ ADD</string>
    <string name="approvals">APPROVALS</string>
    <string name="registration">REGISTRATION</string>
    <string name="location_tab">LOCATION</string>
    <string name="map">MAP</string>
    <string name="stops">STOPS</string>
    <string name="student_avatar">Student Avatar</string>
    <string name="student_name_placeholder">Student Name</string>
    <string name="stop_not_assigned">Stop: Not Assigned</string>
    <string name="assign_stop">ASSIGN STOP</string>
    <string name="routing">ROUTING</string>
    <string name="student_stop_assignment">Student Stop Assignment</string>
    <string name="selected_stops_count">Selected: %1$d stops</string>
    <string name="seats_format">%1$d Seats</string>

    <string name="edit_route">EDIT ROUTE</string>
    <string name="route_information">ROUTE INFORMATION</string>
    <string name="morning_schedule">Morning Schedule</string>
    <string name="afternoon_schedule">Afternoon Schedule</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="maximize_map">Maximize Map</string>
    <string name="my_location">My Location</string>
    <string name="edit">Edit</string>
    <string name="plus_sign">+</string>
    <string name="choose_conductor_optional">Choose Conductor (Optional)</string>
    <string name="select_conductor">Select Conductor</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="no_driver_assigned">No Driver Assigned</string>
    <string name="no_phone">No Phone</string>
    <string name="parent_details">Parent Details</string>
    <string name="first_name_label">FIRST NAME</string>
    <string name="middle_name_label">MIDDLE NAME</string>
    <string name="last_name_label">LAST NAME</string>
    <string name="suffix_label">SUFFIX</string>
    <string name="email_address_label">EMAIL ADDRESS</string>
    <string name="phone_number_label">PHONE NUMBER</string>
    <string name="contact_name_label">CONTACT NAME</string>
    <string name="contact_phone_label">CONTACT PHONE</string>
    <string name="relationship_label">RELATIONSHIP</string>
    <string name="children_information">CHILDREN INFORMATION</string>
    <string name="driver_details">DRIVER DETAILS</string>
    <string name="driver_information">DRIVER INFORMATION</string>
    <string name="license_number_label">LICENSE NUMBER</string>
    <string name="language_label">LANGUAGE</string>
    <string name="conductor_details">CONDUCTOR DETAILS</string>
    <string name="conductor_information">CONDUCTOR INFORMATION</string>
    <string name="emergency_alerts_caps">EMERGENCY ALERTS</string>
    <string name="location_change_request_title">Location Change Request</string>
    <string name="stop_change_request_title">Stop Change Request</string>
    <string name="pending_parents_caps_2">PARENT REQUESTS</string>
    <string name="pending_locations_caps">ADDRESS REQUESTS</string>
    <string name="pending_stops_caps">STOP REQUESTS</string>

    <string name="required_mark"> *</string>
    <string name="bus_capacity_label">Bus Capacity</string>
    <string name="select_stops_for_route">Select Stops for Route</string>
    <string name="full_name_format">%1$s %2$s</string>
</resources>